@@ -285,4 +285,4 @@
 		<view name="WithSections"/>
 		<controller name="CarrierWithSections"/>		<controller name="Typical"/>		<controller name="Carrier"/>
 	</module>		<module name="WarehouseSpecialNew" >		<model name="Warehouse"/>		<view name="WithOnChangeZone"/>		<controller name="WarehouseSpecialNew"/>		<controller name="NoCustomizeList"/>	</module>		<module name="OfficeOnlyWarehouse">		<model name="Office"/>		<view name="OnlyWarehouse"/>		<controller name="Typical"/>			</module>		<module name="ShipmentSeparatedTime">		<model name="Shipment"/>		<view name="SeparatedTime"/>		<controller name="Typical"/>			</module>		<module name="IssueList">		<model name="IssueList"/>		<controller name="IssueList"/>		<mode-controller name="Void"/>	</module>		<module name="IssueChangeDB">		<model name="Issue"/>		<controller name="IssueChangeDB"/>	</module>			<module name="SelectSchema">		<model name="SelectSchema"/>		<controller name="SelectSchema"/>		<mode-controller name="Void"/>	</module>	<module name="SellerSearchListCondition">		<model name="Seller"/>		<view name="SearchListCondition" />		<controller name="Typical"/>	</module>				
-	<module name="SellerSearchListConditionOff">		<model name="Seller"/>		<view name="SearchListConditionOff" />		<controller name="Typical"/>	</module>				<module name="SellerSearchListConditionBlank">		<model name="Seller"/>		<view name="SearchListConditionBlank" />		<controller name="Typical"/>	</module>			<module name="IssueWeb">		<model name="Issue"/>		<view name="IssueWeb" />		<controller name="Typical"/>		<controller name="UrlParameters"/>	</module>		<module name="TreeViewDefaultPath">		<model name="TreeContainer" />		<view name="Simple" />		<controller name = "Typical" />	</module>			<module name="TreeViewNoDefaultPath">		<model name="TreeContainer" />		<view name="NoDefaultPath" />		<controller name = "Typical" />	</module>		<module name="TreeViewAlternateReader">		<model name="TreeContainer" />		<view name="Alternate" />		<controller name = "Typical" />	</module>			<module name="TreeViewDefaultPathPropertyBased">		<model name="TreeContainerPropertyBased" />		<view name="Simple" />		<controller name = "Typical" />	</module>				<module name="GoDescription">		<model name="Login"/>		<controller name = "GoDescription" />	</module>		<module name="Login">		<model name="Login"/>		<controller name="Login"/>	</module>		<module name="FilterBySubfamilyAndYear">		<model name="FilterBySubfamilyAndYear"/>	</module>		<module name="DriverWithTabName">		<model name="Driver"/>		<tab name="OrderByName"/>		<controller name="Typical"/>	</module>		<module name="Teacher">		<model name="Teacher"/>		<mode-controller name="DetailOnly"/> 	</module>		<module name="School">		<model name="School"/>		<mode-controller name="DetailOnly"/> 	</module>		<module name="ReallocationDetailsReadOnly">		<model name="Reallocation"/>		<view name="DetailsReadOnly"/>		<controller name="Typical"/> 	</module>		<module name="ReallocationDetailsEditOnly">		<model name="Reallocation"/>		<view name="DetailsEditOnly"/>		<controller name="Typical"/> 	</module>		<module name="FurnitureSetWithRequiredDescriptionsList">		<model name="FurnitureSet" />		<view name="WithRequiredDescriptionsList" />		<controller name="Typical" />	</module>					</application>
+	<module name="SellerSearchListConditionOff">		<model name="Seller"/>		<view name="SearchListConditionOff" />		<controller name="Typical"/>	</module>				<module name="SellerSearchListConditionBlank">		<model name="Seller"/>		<view name="SearchListConditionBlank" />		<controller name="Typical"/>	</module>			<module name="IssueWeb">		<model name="Issue"/>		<view name="IssueWeb" />		<controller name="Typical"/>		<controller name="UrlParameters"/>	</module>		<module name="TreeViewDefaultPath">		<model name="TreeContainer" />		<view name="Simple" />		<controller name = "Typical" />	</module>			<module name="TreeViewNoDefaultPath">		<model name="TreeContainer" />		<view name="NoDefaultPath" />		<controller name = "Typical" />	</module>		<module name="TreeViewAlternateReader">		<model name="TreeContainer" />		<view name="Alternate" />		<controller name = "Typical" />	</module>			<module name="TreeViewDefaultPathPropertyBased">		<model name="TreeContainerPropertyBased" />		<view name="Simple" />		<controller name = "Typical" />	</module>				<module name="GoDescription">		<model name="Login"/>		<controller name = "GoDescription" />	</module>		<module name="GoDescriptionChainingOnInit">		<model name="Login"/>		<controller name = "GoDescriptionChainingOnInit" />	</module>		<module name="Login">		<model name="Login"/>		<controller name="Login"/>	</module>		<module name="FilterBySubfamilyAndYear">		<model name="FilterBySubfamilyAndYear"/>	</module>		<module name="DriverWithTabName">		<model name="Driver"/>		<tab name="OrderByName"/>		<controller name="Typical"/>	</module>		<module name="Teacher">		<model name="Teacher"/>		<mode-controller name="DetailOnly"/> 	</module>		<module name="School">		<model name="School"/>		<mode-controller name="DetailOnly"/> 	</module>		<module name="ReallocationDetailsReadOnly">		<model name="Reallocation"/>		<view name="DetailsReadOnly"/>		<controller name="Typical"/> 	</module>		<module name="ReallocationDetailsEditOnly">		<model name="Reallocation"/>		<view name="DetailsEditOnly"/>		<controller name="Typical"/> 	</module>		<module name="FurnitureSetWithRequiredDescriptionsList">		<model name="FurnitureSet" />		<view name="WithRequiredDescriptionsList" />		<controller name="Typical" />	</module>					</application>
